--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,django,visualstudiocode
 db.sqlite3
+
+pdf/file/
