--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.5.2
 Django==4.1.2
 django-dotenv==1.4.2
+et-xmlfile==1.1.0
+openpyxl==3.0.10
 psycopg2==2.9.4
+pywin32==304
 sqlparse==0.4.3
 tzdata==2022.5
