--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,45 @@
 asgiref==3.5.2
+asttokens==2.0.8
+backcall==0.2.0
+cffi==1.15.1
+colorama==0.4.5
+cryptography==38.0.1
+debugpy==1.6.3
+decorator==5.1.1
 Django==4.1.2
 django-dotenv==1.4.2
+entrypoints==0.4
 et-xmlfile==1.1.0
+executing==1.1.1
+ipykernel==6.16.0
+ipython==8.5.0
+jedi==0.18.1
+lxml==4.9.1
+nest-asyncio==1.5.6
+numpy==1.23.4
+olefile==0.47.dev4
 openpyxl==3.0.10
+packaging==21.3
+pandas==1.5.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.2.0
+prompt-toolkit==3.0.31
+psutil==5.9.3
 psycopg2==2.9.4
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.13.0
+pyhwp==0.1b15
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.5
 pywin32==304
+pyzmq==24.0.1
+six==1.16.0
 sqlparse==0.4.3
+stack-data==0.5.1
+tornado==6.2
+traitlets==5.5.0
 tzdata==2022.5
+wcwidth==0.2.5
